--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
         "@fullcalendar/daygrid": "^6.1.8",
         "@fullcalendar/interaction": "^6.1.8",
         "@fullcalendar/list": "^6.1.8",
-        "@fullcalendar/timegrid": "^6.1.8"
+        "@fullcalendar/timegrid": "^6.1.8",
+        "@shopify/draggable": "^1.0.0-beta.8",
+        "draggable": "^4.2.0"
     }
 }
